# kama-tr

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/kamatr/: manager.py  provider.py  resource.py
tests/: conftest.py  test_manager.py  test_provider.py  test_resource.py
